--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,6 +7,10 @@ body {
     background-color: rgb(99, 193, 255);
 }
 
+img.lado {
+    float: right;
+}
+
 main {
     background-color: white;
     width: 500px;
